--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,14 @@
+name: Build and deploy zola content
+
 on: 
   push:
     branches:
      - main
     pull_request:
 
-name: Build and deploy GH Pages
+
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
@@ -19,8 +21,6 @@ jobs:
           PAGES_BRANCH: gh-pages
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-name: Build GH Pages
-jobs:
   build:
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main'
